--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//Debug/drv/BME280/subdir_rules.mk=UTF-8
+encoding//Debug/drv/BME280/subdir_vars.mk=UTF-8
 encoding//Debug/drv/ST7735/subdir_rules.mk=UTF-8
 encoding//Debug/drv/ST7735/subdir_vars.mk=UTF-8
 encoding//Debug/drv/adc/subdir_rules.mk=UTF-8
