--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,8 @@ encoding//Debug/drv/ST7735/subdir_rules.mk=UTF-8
 encoding//Debug/drv/ST7735/subdir_vars.mk=UTF-8
 encoding//Debug/drv/adc/subdir_rules.mk=UTF-8
 encoding//Debug/drv/adc/subdir_vars.mk=UTF-8
+encoding//Debug/drv/subdir_rules.mk=UTF-8
+encoding//Debug/drv/subdir_vars.mk=UTF-8
 encoding//Debug/gui/subdir_rules.mk=UTF-8
 encoding//Debug/gui/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
