--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -16,3 +16,11 @@ encoding//Debug/sensors/subdir_vars.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
 encoding//Debug/subdir_rules.mk=UTF-8
 encoding//Debug/subdir_vars.mk=UTF-8
+encoding//Debug/third_party/fatfs/port/subdir_rules.mk=UTF-8
+encoding//Debug/third_party/fatfs/port/subdir_vars.mk=UTF-8
+encoding//Debug/third_party/fatfs/src/option/subdir_rules.mk=UTF-8
+encoding//Debug/third_party/fatfs/src/option/subdir_vars.mk=UTF-8
+encoding//Debug/third_party/fatfs/src/subdir_rules.mk=UTF-8
+encoding//Debug/third_party/fatfs/src/subdir_vars.mk=UTF-8
+encoding//Debug/utils/subdir_rules.mk=UTF-8
+encoding//Debug/utils/subdir_vars.mk=UTF-8
