Brought in the main.c functionality from the sample SD card project, put it into the sdcard.h file

--- a/.cproject
+++ b/.cproject
@@ -82,7 +82,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="third_party/fatfs/src/option/syscall.c|third_party/fatfs/src/option/ccsbcs.c|third_party/fatfs/src/option/cc950.c|third_party/fatfs/src/option/cc949.c|third_party/fatfs/src/option/cc936.c|third_party/fatfs/src/option/cc932.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
